--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
-plugins{
+plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'com.app'
+group = 'com.example'
 version = '1.0'
 sourceCompatibility = '11'
 
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
+    implementation 'net.coobird:thumbnailator:0.4.8'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
