--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.1'
+    implementation 'net.tanesha.recaptcha4j:recaptcha4j:0.0.7'
+    implementation 'javax.json:javax.json-api:1.1.2'
+    implementation 'org.glassfish:javax.json:1.1'
+    implementation 'com.google.code.gson:gson'
+    implementation group: 'com.github.scribejava', name: 'scribejava-core', version: '2.8.1'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
