--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
+    implementation 'net.coobird:thumbnailator:0.4.8'
     implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.1'
     implementation 'net.tanesha.recaptcha4j:recaptcha4j:0.0.7'
     implementation 'javax.json:javax.json-api:1.1.2'
